--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,19 @@ body {
   background-color: rgb(var(--color-primary-hover)/1);
 }
 
+.btn-secondary {
+  @apply font-medium  rounded-lg transition-colors duration-200 border;
+  background-color: rgb(var(--bg-secondary)/1);
+  color: rgb(var(--text-primary)/1);
+  border-color: rgb(var(--border-color)/1);
+}
+
+.btn-secondary:hover {
+  background-color: rgb(var(--bg-primary)/1);
+  color: rgb(var(--color-primary)/1);
+  border-color: rgb(var(--color-primary)/1);
+}
+
 .card {
   @apply rounded-xl shadow-sm border p-6 transition-colors duration-300;
   background-color: rgb(var(--bg-secondary)/1);
